# veri-crypto

./: .gitignore  Cargo.toml  Makefile  README.md  hax.config.toml  rust-toolchain.toml
examples/: kdf_example.rs  sha3_example.rs
proofs/: VERIFICATION.md
proofs/fstar/: Core.fst  Sponge.fst  Utils.fst
src/: core.rs  hash.rs  kdf.rs  lib.rs  sponge.rs  tests.rs  utils.rs
